--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.tictactoegame" >
+    package="com.example.tictactoegame">
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.TicTacToeGame"
         tools:targetApi="31">
         <activity
-            android:name=".ui.Home"
+            android:name=".ui.RegistrationActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MainActivity"
-            android:exported="true" />
-
+            android:name=".ui.HomeActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".ui.GameActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
